@@ -9,8 +9,8 @@
 \usage{
    networkPlot(gsaRes, class, direction, adjusted=FALSE, significance=0.001, 
                geneSets=NULL, overlap=1, lay=1, label="names", cexLabel=0.9, 
-               cexLegend=1, nodeSize=c(10,40), edgeWidth=c(1,15), edgeColor=NULL, 
-               scoreColors=NULL, main)
+               ncharLabel=25, cexLegend=1, nodeSize=c(10,40), edgeWidth=c(1,15), 
+               edgeColor=NULL, scoreColors=NULL, main)
 }
 \arguments{
    \item{gsaRes}{
@@ -42,6 +42,9 @@
    }
    \item{cexLabel}{
       the text size of the node labels.
+   }
+   \item{ncharLabel}{
+      the number of characters to include in the node labels.
    }
    \item{cexLegend}{
       the text size of the legend.
